--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 </head>
 <body>
 <h2>coolish's site</h2>
-<div></div>
+<div>
+	<p>My　Info:</p>
+	<ul>
+		<li><p>Twitter:<a href="https://twitter.com/coolish_01">@coolish_01</a></p></li>
+	</ul>
+</div>
 </body>
 </html>
