--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 <body>
 <h2>coolish's site</h2>
 <div>
-	<p>My　Info:</p>
+	<p>MyInfo:</p>
 	<ul>
 		<li><p>Twitter:<a href="https://twitter.com/coolish_01">@coolish_01</a></p></li>
+	</ul>
+	<p>MyProduct:</p>
+	<ul>
+		<li><p><a href="/wt_fresh_viewer">WT Fresh Viewer</a></p></li>
 	</ul>
 </div>
 </body>
