--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</ul>
 	<p>MyProduct:</p>
 	<ul>
-		<li><p><a href="/wt_fresh_viewer">WT Fresh Viewer</a></p></li>
+		<li><p><a href="/wt_fresh_viewer">WT Fresh Viewer</a>- 配信サイトフレッシュで画面上にコメントを流すことができるChrome拡張機能</p></li>
 	</ul>
 </div>
 </body>
