add zip file url
add 012zip file url

--- a/wt_fresh_viewer/index.html
+++ b/wt_fresh_viewer/index.html
@@ -9,7 +9,7 @@
 	<p>これは配信サイトFreshの画面上にコメントを流すことができるchrome拡張機能です。この機能はchromeブラウザでのみ使用可能なものになっています。<br>
 	chromeをインストールしていない方は先に最新のバージョンをインストールしてください。またchrome、chrome拡張機能の詳しい説明は各自で調べてください。</p>
 	<h3>使い方</h3>
-	<p>まず、<a href="">ここから</a>zipファイルをＤＬして、ファイルを展開してください。</p>
+	<p>まず、<a href="./wt_fresh_viewer_012.zip">ここから</a>zipファイルをＤＬして、ファイルを展開してください。</p>
 	<p>次に、展開したファイルをchrome拡張機能の画面にドラックアンドドロップします。</p>
 	<p>すると、WT fresh viewerというのが追加されていると思います。これで準備完了です。</p>
 	<p>Freshの配信ページに飛んでみてください。コメントが流れてくると思います。また流れない場合はページをリロードしてみてください。</p>
