--- a/wt_fresh_viewer/index.html
+++ b/wt_fresh_viewer/index.html
@@ -9,7 +9,7 @@
 	<p>これは配信サイトFreshの画面上にコメントを流すことができるchrome拡張機能です。この機能はchromeブラウザでのみ使用可能なものになっています。<br>
 	chromeをインストールしていない方は先に最新のバージョンをインストールしてください。またchrome、chrome拡張機能の詳しい説明は各自で調べてください。</p>
 	<h3>使い方</h3>
-	<p>まず、<a href="./wt_fresh_viewer_012.zip">ここから</a>zipファイルをＤＬして、ファイルを展開してください。</p>
+	<p>まず、<a href="./wt_fresh_viewer_013.zip">ここから</a>zipファイルをＤＬして、ファイルを展開してください。</p>
 	<p>次に、展開したファイルをchrome拡張機能の画面にドラックアンドドロップします。</p>
 	<p>すると、WT fresh viewerというのが追加されていると思います。これで準備完了です。</p>
 	<p>Freshの配信ページに飛んでみてください。コメントが流れてくると思います。また流れない場合はページをリロードしてみてください。</p>
@@ -19,6 +19,7 @@
 	<p>この拡張機能を製作するにあたって、<a href="http://com.nicovideo.jp/community/co3314651">seikin TV viewer</a>を参考にさせていただきました。</p>
 	<h3>更新ログ</h3>
 	<ul>
+		<li><p>v0.1.3 (2017/04/02) ・・・ ウィンドウリサイズ時のコメント表示の仕様を修正、その他諸修正</p></li>
 		<li><p>v0.1.2 (2017/04/01) ・・・　β版公開 </p></li>
 	</ul>
 	<h3>製作者</h3>
