--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 	<p>MyInfo:</p>
 	<ul>
 		<li><p>Twitter:<a href="https://twitter.com/coolish_01">@coolish_01</a></p></li>
+		<li><p>Blog:<a href="http://coolish.hatenablog.com/">Hatena Blog</a></p></li>
 	</ul>
 	<p>MyProduct:</p>
 	<ul>
-		<li><p><a href="/wt_fresh_viewer">WT Fresh Viewer</a>- 配信サイトフレッシュで画面上にコメントを流すことができるChrome拡張機能</p></li>
+		<li><p><a href="./wt_fresh_viewer">WT Fresh Viewer</a>- 配信サイトフレッシュで画面上にコメントを流すことができるChrome拡張機能</p></li>
 	</ul>
 </div>
 </body>
