add github link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<ul>
 		<li><p>Twitter:<a href="https://twitter.com/coolish_01">@coolish_01</a></p></li>
 		<li><p>Blog:<a href="http://coolish.hatenablog.com/">Hatena Blog</a></p></li>
+		<li><p>GitHub:<a href="https://github.com/coolish01">coolish01</a></p></li>
 	</ul>
 	<p>MyProduct:</p>
 	<ul>
