--- a/wt_fresh_viewer/index.html
+++ b/wt_fresh_viewer/index.html
@@ -10,9 +10,9 @@
 	<h3>概要</h3>
 	<p class="topic">これは配信サイトFreshの画面上にコメントを流すことができるchrome拡張機能です。現在、生放送のみ対応しています。アーカイブではコメントは流れません。<br>この機能はchromeブラウザでのみ使用可能なものになっています。chromeをインストールしていない方は先に最新のバージョンをインストールしてください。<br>またchrome、chrome拡張機能の詳しい説明は各自で調べてください。</p>
 	<h3>使い方</h3>
-	<p class="topic">まず、<a href="./wt_fresh_viewer_013.zip">ここから</a>zipファイルをＤＬして、ファイルを展開してください。</p>
+	<p class="topic">まず、<a href="./wt_fresh_viewer_013.zip">ここから</a>zipフォルダをＤＬして、フォルダを展開してください。</p>
 	<img class="topic" src="./howto1.png">
-	<p>次に、展開したファイルをchrome拡張機能の画面にドラックアンドドロップします。</p>
+	<p>次に、展開したフォルダをそのままchrome拡張機能の画面にドラックアンドドロップします。</p>
 	<p>すると、WT fresh viewerというのが追加されていると思います。これで準備完了です。</p>
 	<img class="topic" src="./howto2.png">
 	<p class="topic">Freshの配信ページに飛んでみてください。コメントが流れてくると思います。また流れない場合はページをリロードしてみてください。</p>
