--- a/wt_fresh_viewer/index.html
+++ b/wt_fresh_viewer/index.html
@@ -12,12 +12,12 @@
 	<h3>使い方</h3>
 	<p class="topic">まず、<a href="./wt_fresh_viewer_013.zip">ここから</a>zipフォルダをＤＬして、フォルダを展開してください。</p>
 	<img class="topic" src="./howto1.png">
-	<p>次に、展開したフォルダをそのままchrome拡張機能の画面にドラックアンドドロップします。</p>
+	<p>次に、展開したフォルダをそのままchrome拡張機能の画面にドラッグアンドドロップします。</p>
 	<p>すると、WT fresh viewerというのが追加されていると思います。これで準備完了です。</p>
 	<img class="topic" src="./howto2.png">
 	<p class="topic">Freshの配信ページに飛んでみてください。コメントが流れてくると思います。また流れない場合はページをリロードしてみてください。</p>
 	<h3>注意</h3>
-	<p class="topic">この拡張機能は現在試作段階のもので必ずしも満足できるものではないことをご了承ください。また、コメント取得にはFresh公式のAPIを使用していますが、<br>こちらはβ版ということで正確なデータが取得できていない可能性もあります。こちらもご了承ください。加えて、製作者はこの拡張機能の利用によって生じた損害に対する責任を負いません。</p>
+	<p class="topic">この拡張機能は現在試作段階のもので必ずしも満足のいくものではないことをご了承ください。また、コメント取得にはFresh公式のAPIを使用していますが、<br>こちらはβ版ということで正確なデータが取得できていない可能性もあります。こちらもご了承ください。加えて、製作者はこの拡張機能の利用によって生じた損害に対する責任を負いません。</p>
 	<h3>Special Thanks</h3>
 	<p class="topic">この拡張機能を製作するにあたって、<a target="_blank" href="http://com.nicovideo.jp/community/co3314651">seikin TV viewer</a>を参考にさせていただきました。<br>
 	サムネイルに<a target="_blank" href="http://upi.capybbs.net/test/read.cgi/zatudan/1490890008/">かぴばらBBSのスレ</a>で配布していた画像を使用させていただきました。<br>
