--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<p>MyInfo:</p>
 	<ul>
 		<li><p>Twitter:<a href="https://twitter.com/coolish_01">@coolish_01</a></p></li>
-		<li><s><p>Mastodon:<a href="https://mstdn.jp/@coolish">@coolish@mstdn.jp</a>,<a href="https://mastodon.coolish.tk/@coolish">@coolish@mastodon.coolish.tk</a></p></s>gmだったので潰しました</li>
+		<li><s><p>Mastodon:@coolish@mstdn.jp,@coolish@mastodon.coolish.tk</p></s>gmだったので潰しました</li>
 		<li><p>Blog:<a href="http://coolish.hatenablog.com/">Hatena Blog</a></p></li>
 		<li><p>GitHub:<a href="https://github.com/coolish01">coolish01</a></p></li>
 	</ul>
